# firmware-encryptor

./: .hg_archival.txt  CMakeLists.txt  README.MD  des.c  des.h  hex_string.c  hex_string.h  main.c  system.h  test_firmware.hex
